--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxt/ui": "^3.3.0",
     "@tailwindcss/vite": "^4.1.11",
     "nuxt": "^3.17.7",
+    "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3",
     "vue": "^3.5.17",
