--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@compodium/nuxt": "^0.1.0-beta.11",
     "@nuxt/content": "^3.6.3",
     "@nuxt/fonts": "^0.11.4",
     "@nuxt/icon": "^1.15.0",
     "@nuxt/image": "^1.10.0",
+    "@nuxt/kit": "^4.0.1",
     "@nuxt/ui": "^3.3.0",
     "@tailwindcss/vite": "^4.1.11",
     "nuxt": "^3.17.7",
