--- a/package.json
+++ b/package.json
@@ -19,10 +19,15 @@
     "@nuxt/ui": "^3.3.0",
     "@tailwindcss/vite": "^4.1.11",
     "nuxt": "^3.17.7",
+    "nuxt-icon": "^1.0.0-beta.7",
     "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3",
+    "valibot": "^1.1.0",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "vue-tsc": "^3.0.4"
   }
 }
