--- a/package.json
+++ b/package.json
@@ -11,16 +11,15 @@
   },
   "dependencies": {
     "@compodium/nuxt": "^0.1.0-beta.11",
-    "@nuxt/content": "^3.6.3",
     "@nuxt/fonts": "^0.11.4",
     "@nuxt/icon": "^1.15.0",
     "@nuxt/image": "^1.10.0",
     "@nuxt/kit": "^4.0.1",
     "@nuxt/ui": "^3.3.0",
+    "@nuxthq/ui": "^2.7.0",
     "@tailwindcss/vite": "^4.1.11",
     "nuxt": "^3.17.7",
     "nuxt-icon": "^1.0.0-beta.7",
-    "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3",
     "valibot": "^1.1.0",
@@ -28,6 +27,8 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.11",
+    "@types/node": "^24.1.0",
     "vue-tsc": "^3.0.4"
   }
 }
